force-app/main/default/objects/HCK_JunctionContactQuiz__c/HCK_JunctionContactQuiz__c.object-meta.xml
<CustomObject>
    <label>JunctionContactQuiz</label>
    <nameField>
        <label>JunctionContactQuiz Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JunctionContactQuizs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>