force-app/main/default/objects/HCK_JunctionContactQuiz__c/fields/HCK_Contact__c.field-meta.xml
<CustomField>
    <fullName>HCK_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>JunctionContactQuizs</relationshipLabel>
    <relationshipName>JunctionContactQuizs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>