force-app/main/default/objects/HCK_JunctionContactQuiz__c/fields/HCK_Is_Taken__c.field-meta.xml
<CustomField>
    <fullName>HCK_Is_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Taken..?</label>
    <type>Checkbox</type>
</CustomField>