force-app/main/default/objects/HCK_JunctionContactQuiz__c/fields/HCK_Quiz__c.field-meta.xml
<CustomField>
    <fullName>HCK_Quiz__c</fullName>
    <label>Quiz</label>
    <referenceTo>HCK_Quiz__c</referenceTo>
    <relationshipLabel>JunctionContactQuizs</relationshipLabel>
    <relationshipName>JunctionContactQuizs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>